--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Add CNAME for custom domain
         run: echo "aboutme.brainzz.com" > frontend/build/CNAME
 
+      - name: Add SPA fallback (React routing)
+        run: cp frontend/build/index.html frontend/build/404.html
+
       - name: Show build dir
         run: |
           ls -la frontend/build
